Fixed z-index and hover issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,4 +14,5 @@ body {
 .game {
   /*display: inline-block;*/
   position: fixed;
+  -webkit-backface-visibility: hidden;
 }
